made changes in UI

--- a/src/style.css
+++ b/src/style.css
@@ -6,4 +6,12 @@
     max-height: 50px; 
     max-width: 100px; 
   }
+
+  .newClass{
+    min-width: 10%;
+    text-align: left;
+    font-size: 20px;
+    letter-spacing: 1px;
+    font-weight: 500;
+  }
   
