--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,10 @@
     font-weight: 500;
   }
   
+  .trainListLeft {
+    position: sticky;
+    top: 20px;
+  }
+  .trainList {
+    min-height: calc(100vh - 144.8px);
+  }
